--- a/sass/index.css
+++ b/sass/index.css
@@ -1,1 +1,68 @@
-/*# sourceMappingURL=index.css.map */
+* {
+  font-family: roboto;
+}
+
+.fa-solid {
+  padding: 0 10px 0 0;
+}
+
+header {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+header .header-logo {
+  width: 200px;
+}
+header .header-location {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.main-container {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  padding-bottom: 3px;
+}
+
+footer {
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #353535;
+  padding: 22px 25px 22px 25px;
+}
+footer .info {
+  display: flex;
+  flex-direction: column;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+footer .info .info-logo {
+  width: 140px;
+}
+footer .info .info-liens a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 16px;
+  gap: 7px;
+}/*# sourceMappingURL=index.css.map */
