--- a/sass/index.css
+++ b/sass/index.css
@@ -1,26 +1,12 @@
-* {
-  font-family: roboto;
+body {
+  font-family: "roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0;
 }
 
 .fa-solid {
   padding: 0 10px 0 0;
-}
-
-header {
-  width: 100%;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: auto;
-}
-header .header-logo {
-  width: 200px;
-}
-header .header-location {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
 }
 
 .main-container {
@@ -29,6 +15,29 @@ header .header-location {
   display: flex;
   flex-direction: column;
   margin: auto;
+  text-align: center;
+}
+
+.section-bgd {
+  background-color: #f6f6f6;
+}
+
+section {
+  padding: 35px 0 45px;
+}
+
+h1 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+p {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+img {
+  width: 100%;
 }
 
 a {
@@ -43,6 +52,67 @@ ul {
 li {
   list-style-type: none;
   padding-bottom: 3px;
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+header .header-logo {
+  width: 200px;
+  padding: 20px;
+}
+header .header-location {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: #353535;
+  padding: 20px 0;
+  gap: 17px;
+  background-color: #eaeaea;
+  align-items: baseline;
+}
+header .header-location input {
+  width: 120px;
+  height: 25px;
+  border: none;
+  background-color: #eaeaea;
+}
+
+.button-fantasy {
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
+  background: linear-gradient(to top, #9356dc, #ff79da);
+  color: #ffffff;
+  height: 50px;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-size: 16px;
+  padding: 0 25px;
+  border: none;
+  border-radius: 25px;
+  align-self: center;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
+}
+
+.use-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.use-card div {
+  display: flex;
+  width: 80%;
+  background-color: #f6f6f6;
 }
 
 footer {
