--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,8 +1,10 @@
-@import "/sass/partials/loader";
-@import "/sass/partials/structure";
-@import "/sass/partials/header";
-@import "/sass/partials/location";
-@import "/sass/partials/button";
-@import "/sass/partials/use-card";
-@import "/sass/partials/restaurant-card";
-@import "/sass/partials/footer";
+@import "partials/variables";
+@import "partials/mixins";
+//@import "/partials/loader";
+@import "partials/structure";
+@import "partials/header";
+//@import "/sass/partials/location";
+@import "partials/button";
+@import "partials/use-card";
+//@import "/sass/partials/restaurant-card";
+@import "partials/footer";
