--- a/sass/index.scss
+++ b/sass/index.scss
@@ -6,5 +6,5 @@
 //@import "/sass/partials/location";
 @import "partials/button";
 @import "partials/use-card";
-//@import "/sass/partials/restaurant-card";
+@import "partials/restaurant-card";
 @import "partials/footer";
