--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -18,6 +18,11 @@ footer{
             color: #fff;
             font-size: 16px;
             gap: 7px;
-        }      
+        }
+        
+        .fa-solid{
+            font-size: 18px;
+            color: $white;
+        }
     }
 }
