--- a/sass/partials/mixins.scss
+++ b/sass/partials/mixins.scss
@@ -1,6 +1,6 @@
-@mixin button--fantasy {
-    box-shadow: 0px 4px 10px 0px #0000001A;
-    background: linear-gradient(to top, $third-color, $second-color);
+@mixin button--fantasy{
+    box-shadow: 0px 4px 15px 0px #00000026;
+    background: linear-gradient(to top, $first-color, $second-color);
     color: #ffffff;
     height: 50px;
     width: fit-content;
