--- a/sass/index.css
+++ b/sass/index.css
@@ -23,6 +23,10 @@ body {
 .section-bgd {
   background-color: #f6f6f6;
   margin: 0;
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+  padding: 15px;
 }
 
 section {
@@ -89,7 +93,6 @@ header .header-location input {
 }
 
 .button-fantasy {
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
   background: linear-gradient(to top, #9356dc, #ff79da);
   color: #ffffff;
   height: 50px;
@@ -100,6 +103,7 @@ header .header-location input {
   border: none;
   border-radius: 25px;
   align-self: center;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
 }
 
 .use-card {
@@ -111,10 +115,11 @@ header .header-location input {
 .use-card .number-box {
   width: 24px;
   height: 24px;
+  line-height: 24px;
   margin: 0 0 0 20px;
+  position: absolute;
   background-color: #9356dc;
   border-radius: 12px;
-  position: absolute;
   z-index: 2;
   color: #ffffff;
   font-size: 16px;
@@ -141,7 +146,6 @@ header .header-location input {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  margin: 15px;
   overflow: hidden;
   justify-content: space-between;
 }
@@ -155,10 +159,9 @@ header .header-location input {
 }
 .restaurant-card .card-img img {
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  top: -120px;
 }
 .restaurant-card .card-content {
   height: 70px;
@@ -175,6 +178,13 @@ footer {
   background-color: #353535;
   padding: 22px 25px 22px 25px;
 }
+footer h1 {
+  font-family: Shrikhand;
+  font-size: 24px;
+  font-weight: 400;
+  font-style: italic;
+  color: #ffffff;
+}
 footer .info {
   display: flex;
   flex-direction: column;
@@ -186,7 +196,7 @@ footer .info .info-logo {
 }
 footer .info .info-liens a {
   text-decoration: none;
-  color: #fff;
+  color: #ffffff;
   font-size: 16px;
   gap: 7px;
 }
