--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -4,6 +4,14 @@ footer{
     background-color: $dark-grey;
     padding: 22px 25px 22px 25px;
 
+    h1{
+        font-family: Shrikhand;
+        font-size: 24px;
+        font-weight: 400;
+        font-style: italic;
+        color: $white;
+    }
+
     .info{
         display: flex;
         flex-direction: column;
@@ -15,7 +23,7 @@ footer{
         
         .info-liens a{
             text-decoration: none;
-            color: #fff;
+            color: $white;
             font-size: 16px;
             gap: 7px;
         }
@@ -24,5 +32,7 @@ footer{
             font-size: 18px;
             color: $white;
         }
+
+
     }
 }
