--- a/sass/partials/_structure.scss
+++ b/sass/partials/_structure.scss
@@ -25,7 +25,10 @@ body {
 .section-bgd{
     background-color: $light-grey;
     margin: 0;
-
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
+    padding: 15px;
 }
 
 section{
