--- a/sass/partials/_use-card.scss
+++ b/sass/partials/_use-card.scss
@@ -4,13 +4,15 @@
     justify-content: flex-start;
     align-items: center;
 
+
     .number-box{
         width: 24px;
         height: 24px;
+        line-height: 24px;
         margin: 0 0 0 20px;
+        position: absolute;
         background-color: $first-color;
         border-radius: 12px;
-        position: absolute;
         z-index: 2;
         color: $white;
         font-size: 16px;
