--- a/sass/index.css
+++ b/sass/index.css
@@ -127,7 +127,7 @@ header .header-location input {
 }
 .use-card div {
   display: flex;
-  width: 90%;
+  width: 100%;
   background-color: #f6f6f6;
   border-radius: 20px;
   margin: 15px 15px 15px 30px;
@@ -151,7 +151,6 @@ header .header-location input {
 }
 .restaurant-card .card-img {
   width: 100%;
-  margin: 0;
   box-sizing: border-box;
   height: 170px;
   overflow: hidden;
@@ -167,9 +166,40 @@ header .header-location input {
   height: 70px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  padding: 10px;
+  gap: 10px;
 }
-.restaurant-card .card-content h3, .restaurant-card .card-content p {
+.restaurant-card .card-content h3 {
+  font-size: 1.2em;
+  font-weight: 700;
+  color: #000000;
   margin: 0;
+}
+.restaurant-card .card-content p {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 1em;
+  font-weight: 300;
+  color: #000000;
+  text-align: start;
+}
+.restaurant-card .card-content .card-rate button {
+  border: none;
+  background-color: #ffffff;
+}
+.restaurant-card .card-content .card-rate button .fa-heart {
+  font-size: 1.8em;
+}
+.restaurant-card .card-content .card-rate button .fa-regular {
+  display: block;
+}
+.restaurant-card .card-content .card-rate button .fa-solid {
+  color: transparent;
+  background-image: linear-gradient(#ff79da, #9356dc);
+  -webkit-background-clip: text;
+          background-clip: text;
+  display: none;
 }
 
 footer {
