--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -18,3 +18,32 @@
     box-shadow: 0px 4px 15px 0px #0000001A;
 }
 
+@mixin txt__main{
+    font-family: $txt-main;
+    font-weight: 500;
+}
+
+@mixin txt__fantasy{
+    font-family: $txt-fantasy;
+    font-weight: 500;
+}
+
+@mixin small{
+    font-size: 1em;
+}
+
+@mixin medium{
+    font-size: 1.2em;
+}
+
+@mixin tall{
+    font-size: 1.4em;
+}
+
+@mixin thin{
+    font-weight: 300;
+}
+
+@mixin fat{
+    font-weight: 700;
+}
