--- a/sass/partials/_restaurant-card.scss
+++ b/sass/partials/_restaurant-card.scss
@@ -11,11 +11,10 @@
 
     .card-img{
         width: 100%;
-        margin: 0;
         box-sizing: border-box;
         height: 170px;
         overflow: hidden;
-        position: relative;      
+        position: relative;
 
             img{
                 width: 100%;
@@ -28,8 +27,39 @@
         height: 70px;
         display: flex;
         flex-direction: row;
-            h3, p{
+        justify-content: space-between;
+        padding: 10px;
+        gap: 10px;
+            h3{
+                @include medium;
+                @include fat;
+                color: $black;
                 margin: 0;
+            }
+            p{
+                @include txt__main;
+                @include small;
+                @include thin;
+                color: $black;
+                text-align: start;
+            }
+            .card-rate{
+                button{
+                    border: none;
+                    background-color: $white;
+                    .fa-heart{
+                        font-size: 1.8em;
+                    }
+                    .fa-regular{
+                        display: block;
+                    }
+                    .fa-solid{
+                        color: transparent;
+                        background-image: linear-gradient($second-color, $first-color);
+                        background-clip: text;
+                        display: none;
+                    }
+                }
             }
     }
 }
