--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -5,4 +5,7 @@ $dark-grey: #353535;
 $middle-grey: #eaeaea;
 $light-grey: #f6f6f6;
 $white: #ffffff;
+$black: #000000;
 
+$txt-main: Roboto;
+$txt-fantasy: Shrikhand;
