--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,5 +1,6 @@
 @import "partials/variables";
 @import "partials/mixins";
+@import "partials/animations";
 //@import "/partials/loader";
 @import "partials/structure";
 @import "partials/header";
