--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -5,10 +5,8 @@ footer{
     padding: 22px 25px 22px 25px;
 
     h1{
-        font-family: Shrikhand;
-        font-size: 24px;
-        font-weight: 400;
-        font-style: italic;
+        @include txt__fantasy;
+        @include tall;
         color: $white;
     }
 
@@ -24,12 +22,12 @@ footer{
         .info-liens a{
             text-decoration: none;
             color: $white;
-            font-size: 16px;
+            @include small;
             gap: 7px;
         }
         
         .fa-solid{
-            font-size: 18px;
+            @include medium;
             color: $white;
         }
 
