--- a/sass/partials/_structure.scss
+++ b/sass/partials/_structure.scss
@@ -1,13 +1,12 @@
 body {
-    font-family: 'roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
+    @include txt__main;
+    @include small;
     margin: 0;
 }
 
 .fa-solid{
     padding: 0 10px 0 0;
-    font-size: 25px;
+    @include tall;
     color: $dark-grey;
   }
 
@@ -34,13 +33,17 @@ section{
 }
 
 h1{
-    font-size: 24px;
-    font-weight: 700;
+    @include tall;
+    @include fat;
 }
 
 p{
-    font-size: 18px;
-    font-weight: 300;
+    @include medium;
+    @include thin;
+}
+
+h4{
+    @include small;
 }
 
 a{
