--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -6,6 +6,7 @@ $middle-grey: #eaeaea;
 $light-grey: #f6f6f6;
 $white: #ffffff;
 $black: #000000;
+$nouveau: #008766;
 
 $txt-main: Roboto;
 $txt-fantasy: Shrikhand;
