--- a/sass/partials/_restaurant-card.scss
+++ b/sass/partials/_restaurant-card.scss
@@ -14,6 +14,9 @@
         flex-direction: row;
         width: 100%;
         box-sizing: border-box;
+        background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg") ;
+        background-size: cover;
+        background-position: center;
         height: 170px;
         overflow: hidden;
         position: relative;
