--- a/sass/index.css
+++ b/sass/index.css
@@ -223,23 +223,34 @@ header .header-location input {
 .restaurant-card .card-img {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  box-sizing: border-box;
   background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
   background-size: cover;
   background-position: center;
+  width: 100%;
+  box-sizing: border-box;
   height: 170px;
   overflow: hidden;
   position: relative;
 }
-.restaurant-card .card-img img {
-  display: none;
-  position: absolute;
-  z-index: 0;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  box-sizing: border-box;
+.restaurant-card .lapalettedugout {
+  background-image: url("../../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.restaurant-card .lanoteenchantee {
+  background-image: url("../../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.restaurant-card .alafrancaise {
+  background-image: url("../../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.restaurant-card .ledelicedessens {
+  background-image: url("../../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+  background-size: cover;
+  background-position: center;
 }
 .restaurant-card .card-content {
   height: 70px;
