--- a/sass/partials/_restaurant-card.scss
+++ b/sass/partials/_restaurant-card.scss
@@ -9,42 +9,27 @@
     overflow: hidden;
     justify-content: space-between;
 
+    //.lapalettedugout{background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");}
+
+    //.lanoteenchantee{}
+
+    //.alafrancaise{}
+
+    //.ledelicedessens{}
+
+    
+
     .card-img{
         display: flex;
         flex-direction: row;
+        width: 100%;
+        box-sizing: border-box;
         background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
         background-size: cover;
         background-position: center;
-        width: 100%;
-        box-sizing: border-box;
         height: 170px;
         overflow: hidden;
         position: relative;
-
-    }
-
-    .lapalettedugout{
-        background-image: url("../../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-        background-size: cover;
-        background-position: center;
-    }
-
-    .lanoteenchantee{
-        background-image: url("../../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
-        background-size: cover;
-        background-position: center;
-    }
-
-    .alafrancaise{
-        background-image: url("../../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
-        background-size: cover;
-        background-position: center;
-    }
-
-    .ledelicedessens{
-        background-image: url("../../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-        background-size: cover;
-        background-position: center;
     }
 
     .card-content{
