--- a/sass/index.css
+++ b/sass/index.css
@@ -49,6 +49,12 @@ section {
   padding: 35px 0 45px 0;
 }
 
+.restaurant-list {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
 h1 {
   font-size: 1.4em;
   font-weight: 700;
@@ -141,6 +147,7 @@ header .header-location input {
   line-height: 30px;
   justify-content: center;
   font-weight: 700;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
 }
 
 .card-rate {
@@ -209,6 +216,58 @@ header .header-location input {
   animation: color-change 300ms forwards;
 }
 
+.lapalettedugout {
+  background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  box-sizing: border-box;
+  background-size: cover;
+  background-position: center;
+  height: 170px;
+  overflow: hidden;
+  position: relative;
+}
+
+.lanoteenchantee {
+  background-image: url("../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  box-sizing: border-box;
+  background-size: cover;
+  background-position: center;
+  height: 170px;
+  overflow: hidden;
+  position: relative;
+}
+
+.alafrancaise {
+  background-image: url("../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  box-sizing: border-box;
+  background-size: cover;
+  background-position: center;
+  height: 170px;
+  overflow: hidden;
+  position: relative;
+}
+
+.ledelicedessens {
+  background-image: url("../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  box-sizing: border-box;
+  background-size: cover;
+  background-position: center;
+  height: 170px;
+  overflow: hidden;
+  position: relative;
+}
+
 .restaurant-card {
   width: 100%;
   height: 250px;
@@ -219,18 +278,6 @@ header .header-location input {
   flex-direction: column;
   overflow: hidden;
   justify-content: space-between;
-}
-.restaurant-card .card-img {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  box-sizing: border-box;
-  background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-  background-size: cover;
-  background-position: center;
-  height: 170px;
-  overflow: hidden;
-  position: relative;
 }
 .restaurant-card .card-content {
   height: 70px;
@@ -285,4 +332,90 @@ footer .info .info-liens a {
 footer .info .fa-solid {
   font-size: 1.2em;
   color: #ffffff;
+}
+
+.menu-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.menu-header .fa-solid {
+  display: inline-block;
+  position: absolute;
+  left: 30px;
+  top: 30px;
+}
+
+.restaurant {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-course {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  z-index: 1;
+  top: 220px;
+  background-color: #f6f6f6;
+  border-radius: 40px 40px 0 0;
+  padding: 20px 15px 20px 15px;
+}
+.main-course .restaurant-info {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.main-course .restaurant-info h1 {
+  display: block;
+  font-family: Shrikhand;
+  font-size: 1.4em;
+  font-weight: 500;
+}
+.main-course .restaurant-menu {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.main-course .restaurant-menu h2 {
+  font-family: Roboto;
+  font-size: 1em;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+.main-course .restaurant-menu .style-bar {
+  width: 40px;
+  height: 3px;
+  background-color: #008766;
+}
+
+.card-choice {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 15px;
+}
+.card-choice .choice-text {
+  width: 80%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.card-choice .choice-text h3, .card-choice .choice-text p {
+  margin: 0;
+}
+.card-choice .choice-price {
+  line-height: 100%;
+  vertical-align: bottom;
 }/*# sourceMappingURL=index.css.map */
