--- a/sass/partials/_restaurant-card.scss
+++ b/sass/partials/_restaurant-card.scss
@@ -1,3 +1,24 @@
+.lapalettedugout{
+    background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+    @include photo-card;
+}
+
+.lanoteenchantee{
+    background-image: url("../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+    @include photo-card;
+}
+
+.alafrancaise{
+    background-image: url("../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+    @include photo-card;
+}
+
+.ledelicedessens{
+    background-image: url("../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+    @include photo-card;
+}
+
+
 .restaurant-card{
     width: 100%;
     height: 250px;
@@ -8,29 +29,20 @@
     flex-direction: column;
     overflow: hidden;
     justify-content: space-between;
-
-    //.lapalettedugout{background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");}
-
-    //.lanoteenchantee{}
-
-    //.alafrancaise{}
-
-    //.ledelicedessens{}
-
     
 
-    .card-img{
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        box-sizing: border-box;
-        background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-        background-size: cover;
-        background-position: center;
-        height: 170px;
-        overflow: hidden;
-        position: relative;
-    }
+//    .card-img{
+//        display: flex;
+//        flex-direction: row;
+//        width: 100%;
+//        box-sizing: border-box;
+//        background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+//        background-size: cover;
+//        background-position: center;
+//        height: 170px;
+//        overflow: hidden;
+//        position: relative;
+//    }
 
     .card-content{
         height: 70px;
