--- a/sass/index.css
+++ b/sass/index.css
@@ -150,35 +150,31 @@ header .header-location input {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
 }
 
-.card-rate {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  right: 20px;
-  justify-content: center;
+.card-rate button {
+  border: none;
+  background-color: #ffffff;
 }
-.card-rate .fa-heart {
+.card-rate button .fa-heart {
   font-size: 2em;
-  padding: 0;
 }
-.card-rate .fa-solid {
+.card-rate button .fa-regular {
+  background-color: #ffffff;
+  display: block;
+  position: absolute;
+  z-index: 1;
+}
+.card-rate button .fa-regular:hover {
+  animation: empty__heart 500ms forwards;
+}
+.card-rate button .fa-solid {
   color: transparent;
   background-image: linear-gradient(#ff79da, #9356dc);
   -webkit-background-clip: text;
           background-clip: text;
-}
-.card-rate .fa-regular {
-  background-color: #ffffff;
-}
-.card-rate input {
-  display: none;
-  position: absolute;
-  animation: checked empty__heart 500ms forwards;
-}
-.card-rate button {
-  border: none;
-  background-color: #ffffff;
-  position: absolute;
+  display: block;
+  position: relative;
+  left: -16px;
+  top: 22px;
 }
 
 .use-card {
@@ -378,34 +374,39 @@ footer .info .fa-solid {
   font-size: 1.4em;
   font-weight: 500;
 }
-.main-course .restaurant-menu {
+.main-course .restaurant-info .card-rate button {
+  background-color: #f6f6f6;
+}
+.main-course .restaurant-info .card-rate button .fa-regular {
+  background-color: #f6f6f6;
+}
+.main-course .restaurant-info .restaurant-menu {
   width: 100%;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-.main-course .restaurant-menu h2 {
+.main-course .restaurant-info .restaurant-menu h2 {
   font-family: Roboto;
   font-size: 1em;
   font-weight: 300;
   text-transform: uppercase;
   margin: 0;
 }
-.main-course .restaurant-menu .style-bar {
+.main-course .restaurant-info .restaurant-menu .style-bar {
   width: 40px;
   height: 3px;
   background-color: #008766;
 }
-
-.card-choice {
+.main-course .card-choice {
   width: 100%;
   height: 70px;
   border-radius: 15px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
   overflow: hidden;
 }
-.card-choice .card-choice-extend {
+.main-course .card-choice .card-choice-extend {
   width: 120%;
   height: 70px;
   box-sizing: border-box;
@@ -415,30 +416,30 @@ footer .info .fa-solid {
   background-color: #ffffff;
   border-radius: 15px;
 }
-.card-choice .card-choice-extend .choice-text {
+.main-course .card-choice .card-choice-extend .choice-text {
   display: flex;
   flex-direction: column;
   padding-left: 15px;
   gap: 5px;
 }
-.card-choice .card-choice-extend .choice-text h3, .card-choice .card-choice-extend .choice-text p {
+.main-course .card-choice .card-choice-extend .choice-text h3, .main-course .card-choice .card-choice-extend .choice-text p {
   margin: 0;
 }
-.card-choice .card-choice-extend .choice-price {
+.main-course .card-choice .card-choice-extend .choice-price {
   padding-bottom: 15px;
   align-self: flex-end;
   text-align: center;
 }
-.card-choice .card-choice-extend .selected {
+.main-course .card-choice .card-choice-extend .selected {
   height: 70px;
   background-color: #99e2d0;
   border-radius: 0 15px 15px 0;
   text-align: center;
 }
-.card-choice .card-choice-extend .selected .fa-solid {
+.main-course .card-choice .card-choice-extend .selected .fa-solid {
   color: #008766;
   line-height: 70px;
 }
-.card-choice .card-choice-extend:hover {
+.main-course .card-choice .card-choice-extend:hover {
   width: 100%;
 }/*# sourceMappingURL=index.css.map */
