--- a/sass/index.css
+++ b/sass/index.css
@@ -348,13 +348,22 @@ footer .info .fa-solid {
   display: flex;
   flex-direction: column;
 }
+.restaurant .ledelicedessens2 {
+  width: 100%;
+  max-height: 275px;
+  overflow: hidden;
+}
+.restaurant .ledelicedessens2 img {
+  width: 100%;
+  height: auto;
+}
 
 .main-course {
   width: 100%;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: relative;
   z-index: 1;
   top: 220px;
   background-color: #f6f6f6;
