--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -15,6 +15,15 @@ width: 100%;
 box-sizing: border-box;
 display: flex;
 flex-direction: column;
+    .ledelicedessens2{
+        width: 100%;
+        max-height: 275px;
+        overflow: hidden;
+        img{
+            width: 100%;
+            height: auto;
+        }
+    }
 }
 
 .main-course{
@@ -22,7 +31,7 @@ flex-direction: column;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: relative;
     z-index: 1;
     top: 220px;
     background-color: $light-grey;
@@ -122,7 +131,7 @@ flex-direction: column;
             }
         }
     }
-    
+
     .card-choice-extend:hover{
         width: 100%;
     }
