--- a/sass/partials/_button.scss
+++ b/sass/partials/_button.scss
@@ -8,9 +8,9 @@
 //bouton "nouveau"
 .button-new{
     display: flex;
-    position: absolute;
-    top: 20px;
-    right: 20px;
+    position: relative;
+    top: 10px;
+    right: 80px;
     z-index: 1;
     width: 80px;
     height: 30px;
