--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -15,10 +15,11 @@ width: 100%;
 box-sizing: border-box;
 display: flex;
 flex-direction: column;
-    .ledelicedessens2{
+    .photo{
         width: 100%;
         max-height: 275px;
         overflow: hidden;
+        margin-bottom: -40px;
         img{
             width: 100%;
             height: auto;
@@ -33,7 +34,6 @@ flex-direction: column;
     flex-direction: column;
     position: relative;
     z-index: 1;
-    top: 220px;
     background-color: $light-grey;
     border-radius: 40px 40px 0 0;
     padding: 20px 15px 20px 15px;
