--- a/sass/partials/_restaurant-card.scss
+++ b/sass/partials/_restaurant-card.scss
@@ -1,22 +1,3 @@
-.lapalettedugout{
-    background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-    @include photo-card;
-}
-
-.lanoteenchantee{
-    background-image: url("../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
-    @include photo-card;
-}
-
-.alafrancaise{
-    background-image: url("../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
-    @include photo-card;
-}
-
-.ledelicedessens{
-    background-image: url("../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-    @include photo-card;
-}
 
 
 .restaurant-card{
@@ -29,20 +10,19 @@
     flex-direction: column;
     overflow: hidden;
     justify-content: space-between;
-    
 
-//    .card-img{
-//        display: flex;
-//        flex-direction: row;
-//        width: 100%;
-//        box-sizing: border-box;
-//        background-image: url("../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-//        background-size: cover;
-//        background-position: center;
-//        height: 170px;
-//        overflow: hidden;
-//        position: relative;
-//    }
+    .photo{
+        width: 100%;
+        max-height: 275px;
+        overflow: hidden;
+        display: flex;
+        flex-direction: row;
+        img{
+            width: 100%;
+            height: fit-content;
+            align-self: center;
+        }
+    }
 
     .card-content{
         height: 70px;
