--- a/sass/index.css
+++ b/sass/index.css
@@ -150,6 +150,14 @@ header .header-location input {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
 }
 
+.card-rate {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  width: 30px;
+  height: 30px;
+  padding: 10px 40px 0 0;
+}
 .card-rate button {
   border: none;
   background-color: #ffffff;
@@ -159,9 +167,6 @@ header .header-location input {
 }
 .card-rate button .fa-regular {
   background-color: #ffffff;
-  display: block;
-  position: absolute;
-  z-index: 1;
 }
 .card-rate button .fa-regular:hover {
   animation: empty__heart 500ms forwards;
@@ -171,10 +176,18 @@ header .header-location input {
   background-image: linear-gradient(#ff79da, #9356dc);
   -webkit-background-clip: text;
           background-clip: text;
-  display: block;
-  position: relative;
-  left: -16px;
-  top: 22px;
+  padding: 0;
+}
+.card-rate .heart {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.card-rate .empty {
+  z-index: 1;
+}
+.card-rate .empty:hover {
+  animation: empty__heart 500ms forwards;
 }
 
 .use-card {
