--- a/sass/partials/_button.scss
+++ b/sass/partials/_button.scss
@@ -28,17 +28,22 @@
 
 //bouton coeur
 .card-rate{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    padding: 10px 40px 0 0;
+
     button{
         border: none;
         background-color: $white;
+
         .fa-heart{
             font-size: 2em;
         }
         .fa-regular{
             background-color: $white;
-            display: block;
-            position: absolute;
-            z-index: 1;
         }
         .fa-regular:hover{
             animation: empty__heart 500ms forwards;
@@ -47,10 +52,21 @@
             color: transparent;
             background-image: linear-gradient($second-color, $first-color);
             background-clip: text;
-            display: block;
-            position: relative;
-            left: -16px;
-            top: 22px;
+            padding: 0;
         }
+    }
+
+    .heart{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+
+    .empty{
+        z-index: 1;
+    }
+
+    .empty:hover{
+        animation: empty__heart 500ms forwards;
     }
 }
