--- a/sass/index.css
+++ b/sass/index.css
@@ -71,6 +71,7 @@ h4 {
 
 a {
   text-decoration: none;
+  display: flex;
 }
 
 ul {
@@ -130,6 +131,7 @@ header .header-location input {
   border-radius: 25px;
   align-self: center;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
+  margin: 25px auto;
 }
 
 .button-new {
@@ -363,33 +365,39 @@ footer .info .fa-solid {
 .main-course .restaurant-info .card-rate button .fa-regular {
   background-color: #f6f6f6;
 }
-.main-course .restaurant-info .restaurant-menu {
+.main-course .menu-container {
+  display: flex;
+  flex-direction: column;
+}
+.main-course .restaurant-menu {
   width: 100%;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin: 30px 0;
 }
-.main-course .restaurant-info .restaurant-menu h2 {
+.main-course .restaurant-menu h2 {
   font-family: Roboto;
   font-size: 1em;
   font-weight: 300;
   text-transform: uppercase;
   margin: 0;
 }
-.main-course .restaurant-info .restaurant-menu .style-bar {
+.main-course .restaurant-menu .style-bar {
   width: 40px;
   height: 3px;
   background-color: #008766;
 }
-.main-course .card-choice {
+
+.card-choice {
   width: 100%;
   height: 70px;
   border-radius: 15px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
   overflow: hidden;
 }
-.main-course .card-choice .card-choice-extend {
+.card-choice .card-choice-extend {
   width: 120%;
   height: 70px;
   box-sizing: border-box;
@@ -399,30 +407,30 @@ footer .info .fa-solid {
   background-color: #ffffff;
   border-radius: 15px;
 }
-.main-course .card-choice .card-choice-extend .choice-text {
+.card-choice .card-choice-extend .choice-text {
   display: flex;
   flex-direction: column;
   padding-left: 15px;
   gap: 5px;
 }
-.main-course .card-choice .card-choice-extend .choice-text h3, .main-course .card-choice .card-choice-extend .choice-text p {
+.card-choice .card-choice-extend .choice-text h3, .card-choice .card-choice-extend .choice-text p {
   margin: 0;
 }
-.main-course .card-choice .card-choice-extend .choice-price {
-  padding-bottom: 15px;
+.card-choice .card-choice-extend .choice-price {
+  padding: 0 20px 15px 0;
   align-self: flex-end;
-  text-align: center;
+  text-align: right;
 }
-.main-course .card-choice .card-choice-extend .selected {
+.card-choice .card-choice-extend .selected {
   height: 70px;
   background-color: #99e2d0;
   border-radius: 0 15px 15px 0;
   text-align: center;
 }
-.main-course .card-choice .card-choice-extend .selected .fa-solid {
+.card-choice .card-choice-extend .selected .fa-solid {
   color: #008766;
   line-height: 70px;
 }
-.main-course .card-choice .card-choice-extend:hover {
+.card-choice .card-choice-extend:hover {
   width: 100%;
 }/*# sourceMappingURL=index.css.map */
