--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -60,6 +60,11 @@ flex-direction: column;
                 }
             }
         }
+    }
+    .menu-container{
+        display: flex;
+        flex-direction: column;
+    }
 
     .restaurant-menu{
         width: 100%;
@@ -67,6 +72,7 @@ flex-direction: column;
         display: flex;
         flex-direction: column;
         gap: 10px;
+        margin: 30px 0;
     
         h2{
             font-family: $txt-main;
@@ -80,6 +86,7 @@ flex-direction: column;
             width: 40px;
             height: 3px;
             background-color: $nouveau;
+
         }
     }
 }
@@ -87,7 +94,6 @@ flex-direction: column;
 .card-choice{
     width: 100%;
     height: 70px;
-
     border-radius: 15px;
     @include ombrage-medium;
     overflow: hidden;
@@ -113,9 +119,9 @@ flex-direction: column;
         }
 
         .choice-price{
-            padding-bottom: 15px;
+            padding: 0 20px 15px 0;
             align-self: flex-end;
-            text-align: center;
+            text-align: right;
         }
 
         .selected{
@@ -135,5 +141,4 @@ flex-direction: column;
     .card-choice-extend:hover{
         width: 100%;
     }
-}
 }
