--- a/sass/partials/_button.scss
+++ b/sass/partials/_button.scss
@@ -56,7 +56,7 @@
             padding: 0;
         }
     }
-
+/* Astuce pour superposer les 2 boutons*/
     .heart{
         position: absolute;
         width: 100%;
