--- a/sass/index.css
+++ b/sass/index.css
@@ -403,6 +403,7 @@ footer .info .fa-solid {
   align-items: center;
   background-color: #ffffff;
   border-radius: 15px;
+  transition: width 0.4s;
 }
 .card-choice .card-choice-extend .choice-text {
   display: flex;
