--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -107,7 +107,8 @@ flex-direction: column;
         align-items: center;
         background-color: $white;
         border-radius: 15px;
-            
+        transition: width 0.4s;    
+
         .choice-text{
             display: flex;
             flex-direction: column;
